# BucketQuestions

./: .gitignore  .gitmodules  Cargo.toml  README.md
auth/src/: lib.rs
backend/: Cargo.toml  Cargo.toml.bac  default.nix  rustfmt.toml
backend/auth/: Cargo.toml
backend/auth/src/: lib.rs
backend/db/: Cargo.toml
backend/db/migrations/2019-01-26-041034_init/: down.sql  up.sql
backend/db/migrations/2019-05-01-115624_buckets/: down.sql  up.sql
backend/db/src/: fake.rs  lib.rs  mock.rs  schema.rs  test.rs  user.rs  util.rs
backend/db/src/answer/: db_types.rs  fake_impl.rs  interface.rs  mock_impl.rs  mod.rs  pg_impl.rs  tests.rs
backend/db/src/bucket/: db_types.rs  fake_impl.rs  interface.rs  mock_impl.rs  mod.rs  pg_impl.rs  tests.rs  wire_types.rs
backend/db/src/bucket_user_relation/: db_types.rs  fake_impl.rs  interface.rs  mock_impl.rs  mod.rs  pg_impl.rs  tests.rs
backend/db/src/conversions/: answer.rs  bucket.rs  bucket_user_relation.rs  favorite_question.rs  mod.rs  question.rs  user.rs
backend/db/src/favorite_question/: db_types.rs  fake_impl.rs  interface.rs  mock_impl.rs  mod.rs  pg_impl.rs  tests.rs
backend/db/src/question/: db_types.rs  fake_impl.rs  interface.rs  mock_impl.rs  mod.rs  pg_impl.rs  tests.rs
backend/db/src/test/: answer_fixture.rs  bucket_and_user_fixture.rs  bucket_fixture.rs  bucket_user_relation_fixture.rs  empty_fixture.rs  fixture.rs  mock.rs  mod.rs  question_fixture.rs  user_fixture.rs
backend/db/src/user/: db_types.rs  fake_impl.rs  interface.rs  mock_impl.rs  mod.rs  pg_impl.rs  tests.rs  wire_types.rs
backend/diesel_reset/: Cargo.toml
backend/diesel_reset/src/: fixture.rs  lib.rs  reset.rs  setup.rs
backend/migrations/2019-01-26-041034_init/: up.sql
backend/pool/: Cargo.toml
backend/pool/src/: lib.rs
backend/server/: Cargo.toml
backend/server/src/: config.rs  error.rs  lib.rs  main.rs  server_auth.rs  state.rs  static_files.rs  util.rs
backend/server/src/api/: answer.rs  auth.rs  bucket.rs  mod.rs  question.rs  user.rs
backend/server/src/api/test/: answer.rs  auth.rs  bucket.rs  mod.rs  question.rs
backend/server/src/conversions/: mod.rs
backend/server/src/state/: mod.rs  state_config.rs  test_util.rs
backend/server/templates/: login.html
backend/testing_common/src/: database_error.rs  lib.rs  setup.rs
db/migrations/2019-01-26-041034_init/: up.sql
db/migrations/2019-05-01-115624_buckets/: up.sql
db/src/: bucket.rs  lib.rs  schema.rs  user.rs  util.rs
db/src/bucket/: db_types.rs  interface.rs  mod.rs  pg_impl.rs  wire_types.rs
docker/: Dockerfile  build.sh  build_dev.sh  docker-compose-dev.yml  docker-compose.yml  init-letsencrypt.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  DataTypes.tsx  OtherUtil.ts  Util.tsx  index.css  setupProxy.js
frontend/src/components/: Bucket.tsx  BucketList.tsx  BucketManagementModalComponent.tsx  BucketNavBarComponent.tsx  BucketPage.tsx  CreateBucket.tsx  CreateBucketPage.tsx  FourOFour.tsx  FourOFourPage.tsx  Home.tsx  HomePage.tsx  LoadingComponent.tsx  LoginIconComponent.tsx  MenuAppBar.tsx
server/: Cargo.toml
server/src/: config.rs  error.rs  lib.rs  main.rs  server_auth.rs  state.rs  util.rs
server/src/api/: answer.rs  auth.rs  bucket.rs  mod.rs  question.rs
testing_common/: Cargo.toml
testing_common/src/: fixture.rs
wire/: Cargo.toml
wire/src/: answer.rs  bucket.rs  bucket_user_relation.rs  lib.rs  question.rs  user.rs
yew_frontend/: Cargo.toml  app_style.sass  index.html  package-lock.json  package.json
yew_frontend/app/: cargo-module.d.ts  index.ts
yew_frontend/assets/: centered.css  full_height.css  login_page.css  navbar.css
yew_frontend/src/: auth.rs  common.rs  lib.rs  main.rs  requests.rs  services.rs
yew_frontend/src/agents/: fetch.rs  mod.rs  user.rs
yew_frontend/src/components/: button.rs  centered.rs  full_height.rs  mod.rs  navbar.rs
yew_frontend/src/components/login/: login.rs  login_or_user_panel.rs  mod.rs  user_panel.rs
yew_frontend/src/pages/: bucket.rs  create_bucket.rs  index.rs  login.rs  login_or_user_panel.rs  mod.rs  settings_modal.rs  user_panel.rs
yew_frontend/src/pages/bucket/: active_question.rs  answer.rs  control.rs  join_logic.rs  new_question.rs  num_questions.rs  permissions.rs  view.rs
yew_frontend/src/panels/: bucket_list.rs  mod.rs
yew_frontend/src/requests/: answer.rs  auth_and_user.rs  bucket.rs  mod.rs  question.rs
yew_frontend/static/: app_style.sass  index.html  styles.css
