[package]
name = "wire"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.39"
serde = { version = "1.0.91", features = ["derive"] }
uuid = { version = "0.6.*", features = ["serde", "v4"] }
chrono = { version = "0.4.9", features = ["serde"] }
