[package]
name = "yew_frontend"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew", branch="master" }
yew_router = { git = "https://github.com/yewstack/yew_router", branch="next" }
yewtil = {git = "https://github.com/hgzimmerman/yewtil", branch="next"}
yew_css = {git = "https://github.com/hgzimmerman/yew_css", branch="master"}
web_logger = "0.2.0"
wire = {path = "../wire"}
serde = "1.0.101"

failure = "0.1.5"
log = "0.4.8"
chrono = "0.4.9"
base64 = "0.10.1"
stdweb = "0.4.19"
uuid = { version = "0.6.*", features = ["serde", "v4"] }
#uuid = "0.7.4"
serde_json = "1.0.41"
