[package]
name = "authorization"
description = "Common utilities for operating with a limited set of JWT functionality."
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

[dependencies]
frank_jwt = "3.1.0"
chrono = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.6"
