[package]
name = "db"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

[dependencies]
apply = "0.2.2"
diesel = { version = "1.4.1", features = ["postgres", "uuid", "chrono", "serde_json"] }
#r2d2 = "0.8.3"
uuid = {version="0.6.*", features=["serde"]}
chrono = {version = "0.4.*", features=["serde"]}
serde = {version="1.0.85", features=["derive"]}
#itertools = "0.8.0"

pool = {path="../pool"}
