[package]
name = "db"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

[features]
integration = [] # use integration tests instead of unit tests

[dependencies]
apply = "0.2.2"
diesel = { version = "1.4.2", features = ["postgres", "uuid", "chrono", "serde_json"] }
uuid = { version = "0.6.*", features = ["serde", "v4"] }
chrono = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0.91", features = ["derive"] }
diesel_reset = {path="../diesel_reset"}

pool = {path="../pool"}
log = "0.4.6"
rand = "0.6.5"

[dev-dependencies]
static_assertions = "0.3.2"
