[package]
name = "server"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "server_bin"
path = "src/main.rs"


[dependencies]
warp = {version="0.1.15", features=["tls"]}
apply = "0.2.2"
clap = "2.32.0"
log = "0.4.6"
env_logger = "0.6.0"
serde = {version="1.0.85", features=["derive"]}
db = {path="../db"}
testing_common = {path="../testing_common"}
uuid = {version = "0.6.*", features=["v4"]}
serde_json = "1.0.37"
chrono = "0.4.6"
diesel = "1.4.1"
bytes = "0.4.11"
pool = {path="../pool"}
authorization = {path = "../auth"}
hyper = "0.12.23"
futures = "0.1.25"
hyper-tls = "0.3.1"
tokio = "0.1.15"
rand = "0.6.5"
serde_urlencoded = "0.5.5"
tokio-core = "0.1.17"
askama = "0.8.0"
oauth2 = "2.0.0-beta.2"
url = "1.7.2"
base64 = "0.10.1"

[dev-dependencies]
diesel_reset = {path="../diesel_reset"}
