[package]
name = "server"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "server_bin"
path = "src/main.rs"


[features]
integration = ["db/integration"] # use integration tests instead of unit tests

[dependencies]
warp = { version = "0.1.15", features = ["tls"] }
apply = "0.2.2"
clap = "2.33.0"
log = "0.4.6"
env_logger = "0.6.1"
serde = { version = "1.0.91", features = ["derive"] }
db = {path="../db"}
uuid = { version = "0.6.*", features = ["v4"] }
serde_json = "1.0.39"
chrono = "0.4.6"
diesel = "1.4.2"
bytes = "0.4.12"
pool = {path="../pool"}
authorization = {path = "../auth"}
hyper = "0.12.28"
futures = "0.1.27"
hyper-tls = "0.3.2"
tokio = "0.1.20"
rand = "0.6.5"
serde_urlencoded = "0.5.5"
tokio-core = "0.1.17"
askama = "0.8.0"
oauth2 = "2.0.0-beta.2"
url = "1.7.2"
base64 = "0.10.1"
slug = "0.1.4"
diesel_reset = {path="../diesel_reset"}
strum = "0.15.0"
strum_macros = "0.15.0"


[dev-dependencies]
